# dogapi-rust

./: .gitignore  Cargo.toml  README.md
src/: dogapi.rs  error.rs  lib.rs
